@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-20T08:29:40Z",
+  "timestamp" : "2022-10-20T16:35:58Z",
   "count_outdated" : 2501,
   "uniques_outdated" : 643,
-  "count" : 2568,
+  "count" : 2569,
   "uniques" : 683,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
